# researchAgent

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
.history/: .env_20250917150242  .env_20250917153829  .env_20250917162617  .env_20250921105316  .env_20250929144301  .env_20251009135929  README_20251002153326.md
.history/api/: requirements_20250915201446.txt  requirements_20250917153827.txt
.history/app/: .pre-commit-config_20251009193418.yaml  Makefile_20251009142650  Makefile_20251009193423  main_20251002133344.py
.history/app/core/: setting_20250929144254.py  setting_20250930152117.py  setting_20250930152124.py  setting_20250930152132.py
.history/app/providers/: ollama_provider_20250929144251.py  ollama_provider_20250930141830.py
.history/app/routers/: assist_20251002133343.py
.history/compose/: compose.base_20250917141312.yml  compose.base_20250921113622.yml  compose.base_20250921114050.yml  compose.dev_20250917141312.yml  compose.dev_20250917153743.yml  compose.dev_20250921105727.yml  compose.dev_20250921111501.yml  compose.prod_20250915201446.yml  compose.prod_20250921110346.yml
api/: Dockerfile
api/app/: __init__.py
api/app/db/: __init__.py
app/: main.py  requirements.txt
app/core/: logging.py  setting.py
app/providers/: ollama_provider.py
app/routers/: assist.py
app/services/: llm.py
compose/: compose.base.yml  compose.db.yml  compose.dev.yml  compose.ollama.yml
env/: .env.dev
scripts/: health_check.sh  validate_config.py
test/: config_test.py  health_test.py  mock_test.py
(+12 files in other folders)
