[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.117.1",
  "uvicorn[standard]>=0.37.0",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
  "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]  # <-- look in repo root, include the "app" package

[tool.ruff]
exclude = ["**/.history/**"]

[tool.black]
extend-exclude = '''
(
  ^\.history/
)
'''
